--- a/templates/news.html
+++ b/templates/news.html
@@ -1,10 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'default.html' %}
+{% load custom_filters %}
+{% block title %}
+News
+{% endblock title %}
+{% block content %}
+   <h1>Все новости</h1>
+   <hr>
+   {% if news %}
+<ul dir="ltr">
+    {% for new in news %}
+    <li>
+        <hr>
+        <ul dir="ltr">
+            <li>{{new.header|censor}}</li>
+            <li>{{new.preview|censor|truncatechars:20}}</li>
+            <li><a href="{{new.id}}">читать полностью</a></li>
+            <li>Опубликовано: {{new.created_at}}; Изменено: {{new.updated_at}}</li>
+
+            <ul dir="ltr">
+                {% for category in new.categories.all %}
+                <li>{{category.name}}</li>
+                {% endfor %}
+            </ul>
+            <li>rating: {{new.rating}}</li>
+        </ul>
+    </li>
+    {% endfor %}
+</ul>
+
+   {% else %}
+       <h2>новостей нет!</h2>
+   {% endif %}
+
+{% if page_obj.has_previous %}
+<a href="?page=1">1</a>
+{% if page_obj.previous_page_number != 1 %}
+...
+<a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+{% endif %}
+{% endif %}
+
+{# Информация о текущей странице #}
+{{ page_obj.number }}
+{# Информация о следующих страницах #}
+{% if page_obj.has_next %}
+       <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+       {% if paginator.num_pages != page_obj.next_page_number %}
+           ...
+           <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+       {% endif %}
+   {% endif %}
+
+{% endblock content %}
