--- a/templates/new.html
+++ b/templates/new.html
@@ -20,7 +20,7 @@ New
         </ul>
     </li>
     <li>
-        Опубликовано: {{new.created_at}}; Изменено: {{new.updated_at}}
+        Опубликовано: {{new.created_at|date:'M d Y'}}; Изменено: {{new.updated_at|date:'M d Y'}}
     </li>
     <li>
         rating: {{new.rating}}
