добавил редактирование поста

--- a/templates/new.html
+++ b/templates/new.html
@@ -22,6 +22,7 @@ New
     <li>
         Опубликовано: {{new.created_at|date:'M d Y'}}; Изменено: {{new.updated_at|date:'M d Y'}}
     </li>
+    <a href="{{new.pk}}/update/">Изменить новость</a>
     <li>
         rating: {{new.rating}}
     </li>
