--- a/templates/news.html
+++ b/templates/news.html
@@ -7,6 +7,7 @@ News
 {% block content %}
    <h1>Все новости</h1>
    <hr>
+<a href="create/">создать новость</a>
    <form action="" method="get">
        {{ filterset.form.as_p }}
        <input type="submit" value="Найти" />
