--- a/templates/new.html
+++ b/templates/new.html
@@ -23,6 +23,7 @@ New
         Опубликовано: {{new.created_at|date:'M d Y'}}; Изменено: {{new.updated_at|date:'M d Y'}}
     </li>
     <a href="{{new.pk}}/update/">Изменить новость</a>
+    <a href="{{new.pk}}/delete/">Удалить новость</a>
     <li>
         rating: {{new.rating}}
     </li>
