--- a/templates/default.html
+++ b/templates/default.html
@@ -14,6 +14,8 @@
     </head>
     <body>
         <!-- Responsive navbar-->
+        {% load cache %}
+        {%cache 600 navbar%}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
    <div class="container">
        <a class="navbar-brand" href="#">Быдлосайт</a>
@@ -40,6 +42,7 @@
        </div>
    </div>
 </nav>
+        {%endcache%}
         <!-- Page content-->
         <div class="container">
             <div class="row">
