--- a/templates/new.html
+++ b/templates/new.html
@@ -13,6 +13,8 @@ New
         {{new.text|censor}}
     </li>
     <li>
+        {% load cache %}
+        {% cache 300 post_categories %}
         <ul>
             {% for category in new.categories.all %}
             <li>
@@ -22,6 +24,7 @@ New
 
             {% endfor %}
         </ul>
+        {% endcache %}
     </li>
     <li>
         Опубликовано: {{new.created_at|date:'M d Y'}}; Изменено: {{new.updated_at|date:'M d Y'}}
