--- a/templates/default.html
+++ b/templates/default.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load i18n %}
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -15,10 +16,9 @@
     <body>
         <!-- Responsive navbar-->
         {% load cache %}
-        {%cache 600 navbar%}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
    <div class="container">
-       <a class="navbar-brand" href="#">Быдлосайт</a>
+       <a class="navbar-brand" href="#">{% trans "yobasite" %}</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse"
                data-target="#navbarResponsive"
                aria-controls="navbarResponsive" aria-expanded="false"
@@ -28,21 +28,39 @@
        <div class="collapse navbar-collapse" id="navbarResponsive">
            <ul class="navbar-nav ml-auto">
                <li class="nav-item active">
-                   <a class="nav-link" href="http://127.0.0.1:8000/news">News
-                       <span class="sr-only">(current)</span>
+                   <a class="nav-link" href="http://127.0.0.1:8000/news">{% trans "news" %}
+                       <span class="sr-only">({% trans "current" %})</span>
                    </a>
                </li>
                <li class="nav-item">
                    <a class="nav-link" href="/about/">About</a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="http://127.0.0.1:8000/admin/">Админка</a>
+                   <a class="nav-link" href="http://127.0.0.1:8000/admin/">{% trans "admin" %}</a>
                </li>
            </ul>
        </div>
+       <div>
+           <form action="{% url 'set_language' %}" method="POST"> {% csrf_token %} <!-- Не забываем по csrf_token для POST запросов -->
+        <input type="hidden" name="next" value="{{ redirect_to }}">
+
+        <select name="language" id="">
+            {% get_available_languages as LANGUAGES %} <!-- получаем языки -->
+            {% get_language_info_list for LANGUAGES as languages %} <!-- Помещаем их в список languages -->
+
+            {% for language in languages %} <!-- Итерируясь по списку, выводим их название на языке пользователя и код -->
+                <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+                    {{ language.name_local }} - {{ language.code }}
+                </option>
+            {% endfor %}
+        </select>
+        <input type="submit" value="set">
+    </form>
+           <div class="p-3 mb-2 bg-primary text-white">{% trans "Check out my new cool translation" %}!</div>
+     <!-- Переводим строку -->
+       </div>
    </div>
 </nav>
-        {%endcache%}
         <!-- Page content-->
         <div class="container">
             <div class="row">
