--- a/templates/new_edit.html
+++ b/templates/new_edit.html
@@ -1,7 +1,7 @@
 {% extends 'default.html' %}
-
+{% load i18n %}
 {% block content %}
-<h1>Новость</h1>
+<h1>{% trans "new" %}</h1>
 <hr>
 <form action="" method="post">
     {% csrf_token %}
