--- a/templates/news.html
+++ b/templates/news.html
@@ -1,13 +1,14 @@
 {% extends 'default.html' %}
+{% load i18n %}
 {% load custom_filters %}
 {% load custom_tags %}
 {% block title %}
 News
 {% endblock title %}
 {% block content %}
-   <h1>Все новости</h1>
+   <h1>{% trans "all news" %}</h1>
    <hr>
-<a href="create/">создать новость</a>
+<a href="create/">{% trans "create new" %}</a>
    <form action="" method="get">
        {{ filterset.form.as_p }}
        <input type="submit" value="Найти" />
@@ -20,22 +21,22 @@ News
         <ul dir="ltr">
             <li>{{new.header|censor}}</li>
             <li>{{new.preview|censor|truncatechars:20}}</li>
-            <li><a href="{{new.id}}">читать полностью</a></li>
-            <li>Опубликовано: {{new.created_at|date:'M d Y'}}; Изменено: {{new.updated_at|date:'M d Y'}}</li>
+            <li><a href="{{new.id}}">{% trans "read full" %}</a></li>
+            <li>{% trans "published" %}: {{new.created_at|date:'M d Y'}}; {% trans "updated" %}: {{new.updated_at|date:'M d Y'}}</li>
 
             <ul dir="ltr">
                 {% for category in new.categories.all %}
-                <li><p>{{category.name}}{% if category not in user_subscribes %}<button> <a href="categories/{{category.pk}}/subscribe/">подписаться</a> </button>{% endif %}</p></li>
+                <li><p>{{category.name}}{% if category not in user_subscribes %}<button> <a href="categories/{{category.pk}}/subscribe/">{% trans "subscribe" %}</a> </button>{% endif %}</p></li>
                 {% endfor %}
             </ul>
-            <li>rating: {{new.rating}}</li>
+            <li>{% trans "rating" %}: {{new.rating}}</li>
         </ul>
     </li>
     {% endfor %}
 </ul>
 
    {% else %}
-       <h2>новостей нет!</h2>
+       <h2>{% trans "theres no news" %}</h2>
    {% endif %}
 
 {% if page_obj.has_previous %}
